@@ -2,6 +2,7 @@ serd (1.0.1) unstable;
 
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
   * Add SerdWorld for shared library state
+  * Add extensible logging API
   * Bring read/write interface closer to C standard
   * Make nodes opaque
   * Make serd_strtod API const-correct
